# jupyter-smart-on-fhir

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  smart_server_extension.py
.github/workflows/: run-tests.yml
common/: config.py
examples/hub_service/: README.md  jupyterhub_config.py
examples/server_extension/: Dockerfile  README.md  config.py  smart_on_fhir_config.json
hub_service/: .gitignore  README  README.md  fhir.py  jupyterhub_config.py  requirements.txt
jupyter_smart_on_fhir/: __init__.py  auth.py  hub_service.py  server_extension.py
server_extension/: Dockerfile  README.md  fhir.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_hub_service.py  test_server_extension.py
