[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter_smart_on_fhir"
version = "0.1.0"
dependencies = [
    "flask",
    "tornado",
    "pyJWT",
    "requests",
    "jupyter_server",
    "jupyterhub",
    "oauthenticator",
]

[project.optional-dependencies]
testing = ["pytest"]


[tool.setuptools]
packages = ["jupyter_smart_on_fhir"]

[tool.ruff.lint]
ignore = [
  "F841", # unused variable
]
select = [
  "E9", # syntax
  "I",  # isort
  "UP", # pyupgrade
  "F",  # flake8
]
